syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.edu.zup";
option java_outer_classname = "CarrosGrpc";

package br.com.edu.zup;

service CarrosGrpcService {
  rpc cadastrarCarro(CarroRequest) returns (CarroResponse) {}
}

message CarroRequest {
  string modelo = 1;
  string placa = 2;
}

message CarroResponse {
  int64 id = 1;
}